//
//  TestConstants.swift
//  Dubizzle
//
//  Created by Shalini Padmanabhan on 12/21/19.
//  Copyright © Shalini Padmanabhan. All rights reserved.
//

import Foundation

struct AccessiblityIds {
    static let classifiedsTableView = "ClassfiedListTable"
    static let listNameLabel = "ListNameLabel"
    static let listPriceLabel = "ListPriceLabel"
    static let classifiedDetailView = "ClassifiedDetailView"
    static let searchBar = "SearchBar"
    static let detailNameLabel = "DetailNameLabel"
    static let detailPriceLabel = "DetailPriceLabel"
}
